yair-io/tests/lit/mod/bad_simple.ya
// RUN: @yair_as @file --color never

// CHECK: error: Expected '{' to open a module
mod foo. {}
